--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,10 @@
 node = "18"
 
 [build]
-cmds = ["npm install", "npx tsc"]
+cmds = ["npm install"]
 
 [start]
-cmd = "node dist/index.js"
+cmd = "npm start"
 
 [variables]
 NODE_ENV = "production"
