--- a/memory-map-frontend/package.json
+++ b/memory-map-frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.10",
+    "@supabase/supabase-js": "^2.53.0",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
     "react": "^19.1.0",
